Edge:
* [FIX] New lines are maintained and escaped in custom source queries.
* [FIX] Subclasses of indexed models fire delta callbacks properly.
* [FIX] Thinking Sphinx can be loaded via thinking/sphinx, to satisfy Bundler.
* [FEATURE] indexer and searchd settings are added to the appropriate objects from config/thinking_sphinx.yml (@ygelfand).
* [FIX] New lines are maintained and escaped in sql_query values.

2013-01-02: 3.0.0
* [CHANGE] Updating Riddle dependency to 1.5.4.
* [FIX] Respect source options as well as underlying settings via the set_property method in index definitions.
* [FIX] Load real-time index definitions when listing fields, attributes, and/or conditions.
* [CHANGE] UTF-8 is now the default charset again (as it was in earlier Thinking Sphinx versions).
* [FEATURE] Initial realtime index support, including the ts:generate task for building index datasets. Sphinx 2.0.6 is required.
* [CHANGE] Removing ts:version rake task.
* [FEATURE] SphinxQL connection pooling via the Innertube gem.

2012-12-22: 3.0.0.rc
* [FEATURE] Source type support (query and ranged query) for both attributes and fields. Custom SQL strings can be supplied as well.
* [FEATURE] Wordcount attributes and fields now supported.
* [FEATURE] Support for Sinatra and other non-Rails frameworks.
* [FEATURE] A sphinx scope can be defined as the default.
* [FEATURE] An index can have multiple sources, by using define_source within the index definition.
* [FEATURE] sanitize_sql is available within an index definition.
* [FEATURE] Providing :prefixes => true or :infixes => true as an option when declaring a field means just the noted fields have infixes/prefixes applied.
* [FEATURE] ThinkingSphinx::Search#query_time returns the time Sphinx took to make the query.
* [FEATURE] Namespaced model support.
* [FEATURE] Default settings for index definition arguments can be set in config/thinking_sphinx.yml.
* [FIX] Correctly escape nulls in inheritance column (Darcy Laycock).